<resources>
    <string name="app_name">AutoBidder</string>
    <string name="app_label">AutoBidder</string>
    <string name="search_hint">Search here</string>
    <string name="search_view">Enter search</string>
    <!-- Strings related to login -->
    <string name="prompt_mobile">Mobile</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_login">Log In</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="SignUp">Dont have an account? Sign Up</string>
    <string name="Remember_Me">Remember Me</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string-array name="signupcateg">
        <item>Select Type</item>
        <item>Dealer</item>
        <item>Customer</item>
    </string-array>
    <string-array name="dashboarditems">
        <item>Visits :</item>
        <item>Inventory :</item>
        <item>Users :</item>
        <item>Hot Deals :</item>
        <item>Leads :</item>
    </string-array>
    <string-array name="imagesnames">
        <item>ACCOUNT_CIRCLE</item>
        <item>CUBE</item>
        <item>THUMBS_UP_DOWN</item>
        <item>FIRE</item>
        <item>ARROW_UP</item>
    </string-array>
    <string-array name="carprofilemenus">
        <item>Brand:</item>
        <item>Model:</item>
        <item>Variant:</item>
        <item>Year:</item>
        <item>Usage:</item>
        <item>Cost:</item>
        <item>Expectations:</item>
        <item>Location:</item>
        <item>Dealer:</item>
        <item>Owner:</item>
    </string-array>
    <string-array name="carprofileicons">
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
        <item>PLAY</item>
    </string-array>
    <string-array name="carprofilevalues">
        <item>Lamborghini</item>
        <item>Huracan</item>
        <item>Avio</item>
        <item>2017</item>
        <item>800kms</item>
        <item>2.91Cr</item>
        <item>2.3Cr</item>
        <item>Delhi</item>
        <item>Pavan</item>
        <item>Gunjan</item>
    </string-array>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
